data/derived/sp14/progs/unify/prog0742.ml.out
Characters 12-13:
  (1 mod 10 ::4);;
              ^
Error: This expression has type int but an expression was expected of type
         int list
